fix scroll on mobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+html {
+    height: -webkit-fill-available;
+}
+
 body {
     background-color: #0d1117;
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
     color: #7891b8;
-    height: 100vh;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
     display: flex;
     gap: 1rem;
     flex-direction: column;
